--- a/user/cr6609/settings.ini
+++ b/user/cr6609/settings.ini
@@ -12,7 +12,7 @@ BUILDER_TAG="latest"
 REPO_URL="https://github.com/openwrt/openwrt"
 REPO_BRANCH="master"
 # REPO_BRANCH="openwrt-19.07"
-REPO_VERSION='24.10.0-rc7'
+REPO_VERSION='24.10.0'
 
 
 # Base URL where to download the ImageBuilder and SDK
