--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.gitignore
+
 /user/current
 /openwrt_bin
 /openwrt_firmware
@@ -6,3 +8,8 @@
 *.rej
 *.orig
 *.new
+
+.actrc
+.actrc.swp
+.events
+.secrets
