--- a/user/default/source/feeds.conf
+++ b/user/default/source/feeds.conf
@@ -1,2 +1,2 @@
 src-link kouhj /home/builder/kouhj_src
-src-git  open-app-filter https://github.com/destan19/OpenAppFilter.git
+src-git  openappfilter https://github.com/destan19/OpenAppFilter.git
