Refactor settings initialization and update download URLs in settings.ini files

--- a/user/ax6s/settings.ini
+++ b/user/ax6s/settings.ini
@@ -13,12 +13,10 @@ REPO_URL="https://github.com/openwrt/openwrt"
 REPO_BRANCH="master"
 # REPO_BRANCH="openwrt-19.07"
 REPO_VERSION='24.10.0'
-
-
-# Base URL where to download the ImageBuilder and SDK
-#OPENWRT_DOWNLOAD_SITE_URL='https://downloads.openwrt.org/snapshots/targets/mediatek/mt7622'
-OPENWRT_DOWNLOAD_SITE_URL="https://downloads.openwrt.org/releases/${REPO_VERSION}/targets/mediatek/mt7622"
-#OPENWRT_DOWNLOAD_SITE_URL='https://mirrors.cloud.tencent.com/lede/snapshots/targets/mediatek/mt7622'
+CONFIG_TARGET_BOARD="mediatek"
+CONFIG_TARGET_SUBTARGET="mt7622"
+CONFIG_TARGET_ARCH_PACKAGES="aarch64_cortex-a53"
 
 # Base URL where to download the prebuilt packages
-OPENWRT_PACKAGES_URL="https://downloads.openwrt.org/releases/${REPO_VERSION}/packages/aarch64_cortex-a53"
+PRE_BUILT_PACKAGES_SITE_URL="https://downloads.openwrt.org"
+#PRE_BUILT_PACKAGES_SITE_URL="https://mirrors.cloud.tencent.com"
